# kindle-manga-reader

./: .gitignore  README.md  meson.build
.github/workflows/: build-kindle.yml
scripts/: build-mac.sh
src/: app.c  app.h  main.c  updater.c  updater.h
src/device/: brightness.c  brightness.h
src/models/: manga.h
src/net/: http.c  http.h  image_loader.c  image_loader.h
src/sources/: mangakatana.c  mangakatana.h  source.h  source_registry.c  source_registry.h
src/ui/: keyboard.c  keyboard.h  manga_view.c  manga_view.h  reader_view.c  reader_view.h  search_view.c  search_view.h  settings_view.c  settings_view.h  widgets.c  widgets.h
src/util/: cache.c  cache.h  database.c  database.h  html_parser.c  html_parser.h
